// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`automation - planning input > input value 1`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": null,
    "thought": undefined,
    "type": "Tap",
  },
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input > input value 2`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": null,
    "thought": undefined,
    "type": "Tap",
  },
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input > input value Add, delete, correct and check 1`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the task input box containing 'Learn English'",
    },
    "param": {
      "value": "Learn English tomorrow",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;
